# disci

./: .coverage  .gitignore  INSTALL_PYTHON.ipynb  PEP8.ipynb  args_kwargs.ipynb  checkheaders.ipynb  clases.ipynb  class_builders.ipynb  code_coverage.ipynb  conceptos.ipynb  ctypes.ipynb  decorators.ipynb  documentacion_con_sphinx.ipynb  entornosVirtuales.ipynb  integracion_continua.ipynb  ipdb.ipynb  learn_makefile.ipynb  lenguaje_estatico.py  manifest_in.ipynb  mock.ipynb  numba.ipynb  packages.ipynb  paradigmas.ipynb  patrones_creacionales.ipynb  pickle_usage.ipynb  practicaNumpy.ipynb  pydocstyle.ipynb  pytest_fixtures.ipynb  scipy.ipynb  setuptools.ipynb  sh.ipynb  styles.ipynb  test_coverage.ipynb  test_driven_development.ipynb  tox.ipynb  treading_y_paralelizacion.ipynb  vs_code_configurations.ipynb
coverage_practice/: function.py  test_function.py
ctypes_practice/: func.py  funcion.c
debugging/: debugging_notes.ipynb  example.py
draft/: voronoi_generator.py
git/: Aprendiendo_git.tm  git_part2.ipynb
howtopytest/: decorators_and_fixtures.ipynb  mock.ipynb  pytst.ipynb
packages_in_python/pycountwords/pycountwords/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
packages_in_python/pycountwords/pycountwords/docs/: conf.py
packages_in_python/pycountwords/pycountwords/src/pycountwords/: pycountwords.py
packages_in_python/pyprojectpkg/: README.md  setup.cfg
packages_in_python/pyprojectpkg/first_python_package.egg-info/: PKG-INFO
packages_in_python/pyprojectpkg/src/first_python_package.egg-info/: SOURCES.txt  top_level.txt
repaso_2024/: oop.ipynb  (+8 more)
(+46 files in other folders)
