[metadata]
name = first-python-package
version = 0.0.1
author = Federico Bustillos
author_email = jorgefedericobustillosrava@gmail.com
description = This is my first package so, value it
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License

[options]
package_dir = =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires = [pandas,numpy,matplotlib,termcolor>=1.1.0,<2 ]

[options.packages.find]
where = src
exclude = test*