[tool.poetry]
name = "pycountwords"
version = "0.1.0"
description = "A package to count words"
authors = ["Federico Bustillos"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
